# provisional-repo-kogia

./: README.md
backend/: docker-compose.yml  pyproject.toml
backend/auth_service/: .env  Dockerfile  models.py  pyproject.toml  run.py
backend/env/: pyvenv.cfg
backend/env/Scripts/: activate  activate.bat
backend/infdb_service/: .env  Dockerfile  run.py
backend/infdb_service/config/: settings.py
backend/measures_service/: Dockerfile  run.py
backend/measures_service/config/: settings.py
backend/measures_service/database/: models.py  schema.py
backend/measures_service/routes/: measures_routes.py
backend/sensor_service/: .env  Dockerfile  run.py
backend/sensor_service/database/: models.py  schema.py
backend/sensor_service/routes/: sensor_routes.py
backend/simulations/: insert_data.py  insert_data_continuous.py  insert_data_continuous_2.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: AddChart.jsx  AddChartButton.jsx  AddChartDialog.jsx  AddMeasureDialog.jsx  AutoCompleteSearch.jsx  ButtonAddDevice.jsx  ButtonAddSensor.jsx  ChartContainer.jsx  ContentMeasurment.jsx  ContentTable.jsx  ContentTableSensors.jsx  Login.jsx  MeasurmentList.jsx  PopupAddNodo.jsx  PopupAddSensor.jsx  PopupEditNodo.jsx  ProtectedRoute.jsx  RealTimeChart.jsx  SelecetMedidas.jsx  SelectSensors.jsx  Sensors.jsx
frontend/src/context/: NodosContext.jsx
